# seer

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/monitor/: affinity.rs  apm.rs  backup.rs  containers.rs  database.rs  dependencies.rs  export.rs  filesystem_monitor.rs  gpu.rs  hardware_sensors.rs  history.rs  io_analysis.rs  iot.rs  limits.rs  log_monitor.rs  memory_leak.rs  mod.rs  network.rs  performance.rs  process_tree.rs  processes.rs  security.rs  services.rs  sessions.rs  storage.rs  system.rs  thermal.rs
src/ui/: dashboard.rs  mod.rs
src/ui/widgets/: advanced_monitoring.rs  mod.rs
tests/: integration_tests.rs
