[package]
name = "seer"
version = "0.1.0"
edition = "2021"
description = "A comprehensive CLI system monitoring tool"
authors = ["Your Name <email@example.com>"]
license = "MIT"

[dependencies]
sysinfo = "0.30"
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
glob = "0.3"
csv = "1.3"
num_cpus = "1.16"

[lib]
name = "seer"
path = "src/lib.rs"

[[bin]]
name = "seer"
path = "src/main.rs"