[package]
name = "seer"
version = "0.1.0"
edition = "2021"
description = "A comprehensive CLI system monitoring tool"
authors = ["Your Name <email@example.com>"]
license = "MIT"

[dependencies]
sysinfo = "0.30"
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
glob = "0.3"
csv = "1.3"
num_cpus = "1.16"
md5 = "0.7"

# Database monitoring dependencies
mysql = { version = "24.0", optional = true }
postgres = { version = "0.19", optional = true }
mongodb = { version = "2.0", optional = true }
redis = { version = "0.23", optional = true }

# Network and IoT monitoring
nix = "0.27"
libc = "0.2"

# Optional features for enhanced monitoring
[features]
default = []
database-mysql = ["mysql"]
database-postgres = ["postgres"]  
database-mongodb = ["mongodb"]
database-redis = ["redis"]
full-database = ["database-mysql", "database-postgres", "database-mongodb", "database-redis"]

[lib]
name = "seer"
path = "src/lib.rs"

[[bin]]
name = "seer"
path = "src/main.rs"